--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TYPES COFEE</title>
+  <title>CoFFee LoVeR</title>
   <link rel="stylesheet" href="./COFEE.css">
   <script src="https://kit.fontawesome.com/d257e08c4a.js" crossorigin="anonymous"></script>
 </head>
